--- a/resume.tex
+++ b/resume.tex
@@ -7,14 +7,14 @@
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
 
-\name{Bin Yuan}
+\name{张 勇 涛}
 
 \basicInfo{
   \email{yuanbin2014@gmail.com} \textperiodcentered\ 
   \phone{(+86) 131-221-87xxx} \textperiodcentered\ 
   \linkedin[billryan8]{https://www.linkedin.com/in/billryan8}}
 
-\section{\faGraduationCap\ Education}
+\section{\faArrows\ Education}
 \datedsubsection{\textbf{Shanghai Jiao Tong University (SJTU)}, Shanghai, China}{2013 -- Present}
 \textit{Master student} in Electronics Engineering (EE), expected March 2016
 \datedsubsection{\textbf{Xidian University}, Shaanxi, China}{2009 -- 2013}
